# detonator

./: .env.template  .gitignore  DYNAMIC_AUTH_UI.md  README.md  detonator.db  edr_templates.yaml.sample  migrate_profiles_yaml.py  migrate_to_profiles.py  profiles_init.yaml  profiles_init.yaml.sample  pyproject.toml  requirements.txt  start.sh  test_azure.py  test_edr_templates.py  test_vm_monitor.py
azure/: config.env.sample  init_az_resource_group.sh  install-agent.ps1  make_vm_template.sh  upload_rededr.sh  upload_script.sh
detonator/: __main__.py  database.py  edr_templates.py  fastapi_app.py  flask_app.py  logging_config.py  schemas.py  utils.py  vm_manager.py  vm_monitor.py
detonatorapi/: agent_interface.py  alert_monitor.py  azure_manager.py  database.py  db_interface.py  edr_templates.py  fastapi_app.py  logging_config.py  mde_client.py  rededr_api.py  schemas.py  settings.py  settings.yaml  token_auth.py  utils.py  vm_manager.py  vm_monitor.py  web_files.py  web_profiles.py  web_scans.py  web_submissions.py  web_vms.py
detonatorcmd/: README.md  __main__.py  api_client.py  client.py  ui_client.py
detonatorui/: __main__.py  auth.py  config.py  config.yaml  flask_app.py  get.py  post.py  windowseventxml_parser.py
doc/: authentication.md  gather-elastic.md  gather-mde.md  implement-edr.md  overview.md  read_only_mode.md  setup-azure.md  setup-proxmox.md  setup-public.md  setup-reverseproxy.md  setup-singleuser.md
elastic_rules/: elastic_rule_converter.py  elastic_rules.csv
scripts/: install-ssh.ps1  invoke.bat  setup_rededr_windows.ps1  ssh_install.ps1  (+1 more)
(+102 files in other folders)
