[tool.poetry]
name = "detonator"
version = "0.1.0"
description = ""
authors = ["Dobin <dobin.rutishauser@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = {extras = ["standard"], version = ">=0.115.14,<0.116.0"}
flask = ">=3.0.0"
uvicorn = ">=0.30.0"
requests = ">=2.31.0"
sqlalchemy = ">=2.0.0"
python-multipart = ">=0.0.6"
azure-identity = ">=1.12.0"
azure-mgmt-compute = ">=30.0.0"
azure-mgmt-network = ">=25.0.0"
azure-mgmt-resource = ">=23.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
proxmoxer = ">=2.2.0,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"