[project]
name = "detonator"
version = "0.1.0"
description = ""
authors = [
    {name = "Dobin", email = "dobin.rutishauser@gmail.com"}
]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"